# Sprocket

./: .gitignore  Cargo.toml  README.md  justfile
docs/: ARCHITECTURE.md  BRAND.md  GOAL.md
docs/notes/: pro-dr-notes.md
docs/project/architecture/: ARCHITECTURE.md
docs/project/llms/: llms.txt
docs/project/plans/: roadmap.md
docs/project/product/: positioning.md
docs/systems/: commit-system.md
src/: classification.rs  cli.rs  config.rs  docs_worker.rs  lib.rs  main.rs  tests.rs
src/app/: baseline.rs  checkpoint.rs  install_codex.rs  mod.rs  pre_tool_use.rs  session_start.rs  support.rs
src/codex/: hooks_json.rs  mod.rs  payload.rs  responses.rs
src/domain/: decision.rs  delta.rs  errors.rs  ids.rs  intent.rs  journal.rs  manager.rs  manifest.rs  mod.rs  policy.rs  repopath.rs  session.rs  session_tracker.rs  snapshot.rs  turn.rs
src/engine/: classify.rs  init_stream.rs  materialize_hidden.rs  mod.rs  observe.rs  promote_visible.rs  reconcile_pending.rs  repair.rs  session_commit.rs
src/infra/: atomic_write.rs  clock.rs  failpoint.rs  git.rs  git_cli.rs  journal_store.rs  lock.rs  manifest_store.rs  mod.rs  refs.rs  store.rs  temp_index.rs
tests/bootstrap/: main.rs
tests/checkpoint_flow/: main.rs
tests/e2e_cli/: main.rs
tests/guards_runtime/: main.rs
tests/observation/: main.rs
tests/promotion/: main.rs
tests/support/: assertions.rs  cmd.rs  env.rs  mod.rs  payloads.rs  repo.rs
