[package]
name = "sprocket"
version = "0.1.0"
edition = "2024"
description = "Agentic repo bootstrap and self-healing maintenance engine."
license = "MIT"
repository = "https://github.com/your-org/sprocket"

[dependencies]
anyhow = "1.0"
globset = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
shlex = "1.3"
toml = "0.8"
wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3.13"
