[package]
name = "sprocket"
version = "0.1.0"
edition = "2024"
description = "Agentic repo bootstrap and self-healing maintenance engine."
license = "MIT"
repository = "https://github.com/your-org/sprocket"

[dependencies]
anyhow = "1"
base64 = "0.22"
blake3 = "1"
bstr = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1.3"
tempfile = "3"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
zstd = "0.13"

[dev-dependencies]
